@@ -1,0 +1,67 @@
+{*
+* 2007-2012 PrestaShop
+*
+* NOTICE OF LICENSE
+*
+* This source file is subject to the Academic Free License (AFL 3.0)
+* that is bundled with this package in the file LICENSE.txt.
+* It is also available through the world-wide-web at this URL:
+* http://opensource.org/licenses/afl-3.0.php
+* If you did not receive a copy of the license and are unable to
+* obtain it through the world-wide-web, please send an email
+* to license@prestashop.com so we can send you a copy immediately.
+*
+* DISCLAIMER
+*
+* Do not edit or add to this file if you wish to upgrade PrestaShop to newer
+* versions in the future. If you wish to customize PrestaShop for your
+* needs please refer to http://www.prestashop.com for more information.
+*
+*  @author PrestaShop SA <contact@prestashop.com>
+*  @copyright  2007-2012 PrestaShop SA
+*  @license    http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+*  International Registered Trademark & Property of PrestaShop SA
+*}
+
+{extends file="controllers/products/helpers/form/form.tpl"}
+
+{block name="autoload_tinyMCE"}
+	// Execute when tab Informations has finished loading
+	tabs_manager.onLoad('Informations', function(){
+		tinySetup({
+                        //Rajout EiCmsLinks
+                        plugins : "colorpicker link image paste pagebreak table contextmenu filemanager table code media autoresize textcolor eicmslinks",
+                        toolbar2: "eicmslinks",
+                        //Eof Rajout EiCmsLinks
+			editor_selector :"autoload_rte",
+			setup : function(ed) {
+				ed.on('init', function(ed)
+				{
+					if (typeof ProductMultishop.load_tinymce[ed.target.id] != 'undefined')
+					{
+						if (typeof ProductMultishop.load_tinymce[ed.target.id])
+							tinyMCE.get(ed.target.id).hide();
+						else
+							tinyMCE.get(ed.target.id).show();
+					}
+				});
+
+				ed.on('keydown', function(ed, e) {
+					tinyMCE.triggerSave();
+					textarea = $('#'+tinymce.activeEditor.id);
+					var max = textarea.parent('div').find('span.counter').data('max');
+					if (max != 'none')
+					{
+						count = tinyMCE.activeEditor.getBody().textContent.length;
+						rest = max - count;
+						if (rest < 0)
+							textarea.parent('div').find('span.counter').html('<span style="color:red;">{l s='Maximum'} '+ max +' {l s='characters'} : '+rest+'</span>');
+						else
+							textarea.parent('div').find('span.counter').html(' ');
+					}
+				});
+			}
+		});
+	});
+{/block}
+	
