@@ -11,4 +11,5 @@
 2015-04-04 V 0.3.0 : - Compatibilité avec prestashop 1.5 et 1.6 via une surcharge alternative 
 2015-05-01 V 0.4.0 : - Gestion de liens dynamiques pour les catégories de produits
 2015-05-04 V 0.5.0 : - Gestion des liens dynamiques pour les produits
-2015-08-10 V 0.6.0 : - Gestion des liens dynamiques dans l'éditeur tinyMce de la description des catégories + affichage Front 
+2015-08-10 V 0.6.0 : - Gestion des liens dynamiques dans l'éditeur tinyMce de la description des catégories + affichage Front
+2015-08-10 V 0.7.0 : - Gestion des liens dynamiques dans l'éditeur tinyMce de la description et description courte des produits + affichage Front 
